# ai-designer

./: .replit  app.py  articles.py  database.py  migration_add_shopping_list.sql  nixpacks.toml  pdf_generator.py  prompts.py  pyproject.toml  replit.md  utils.py
attached_assets/: Pasted--Replit-Agent-AI-Framework-Streamlit-Py-1763215362962_1763215362962.txt  Pasted--shopping-list-category-items-name-sku--1763549518004_1763549518004.txt  Pasted-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-been-closed-unexpect-1763220236861_1763220236862.txt  Pasted-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-recommendations-budget-dat-1763555474873_1763555474874.txt
